crates/service/tests/hover/snapshots/features__hover__table_keyword.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(table $x 1 (ref null func))\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 3
    },
    "end": {
      "line": 2,
      "character": 8
    }
  }
}
