crates/service/tests/hover/snapshots/features__hover__tag_int_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(tag $e (param i32) (result f32) (result f64))\n```"
  },
  "range": {
    "start": {
      "line": 5,
      "character": 12
    },
    "end": {
      "line": 5,
      "character": 13
    }
  }
}
