crates/service/tests/hover/snapshots/features__hover__tag_keyword.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(tag (param i32) (result f32) (result f64))\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 3
    },
    "end": {
      "line": 2,
      "character": 6
    }
  }
}
