crates/service/tests/hover/snapshots/features__hover__three_slots_instr_op_code.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nf64x2.sqrt\n```\nBinary Opcode: 0xFD 0xEF 0x01"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 11
    },
    "end": {
      "line": 2,
      "character": 21
    }
  }
}
