crates/service/tests/hover/snapshots/features__hover__type_decl.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(type $type (func (param $param i32) (param f32) (param f64) (result i32) (result i64)))"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 10
    },
    "end": {
      "line": 2,
      "character": 15
    }
  }
}
