crates/service/tests/hover/snapshots/features__hover__type_decl_empty.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(type $type (func))"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 10
    },
    "end": {
      "line": 2,
      "character": 15
    }
  }
}
