crates/service/tests/hover/snapshots/features__hover__type_use_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": [
    {
      "language": "wat",
      "value": "(type $type (func (param $param i32) (param f32) (param f64) (result i32) (result i64)))"
    }
  ],
  "range": {
    "start": {
      "line": 3,
      "character": 16
    },
    "end": {
      "line": 3,
      "character": 21
    }
  }
}
